# cart

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
nav/: Cargo.toml
nav/src/: cart_nav_template.rs  lib.rs
nav/templates/: cart_nav.html
scripts/: prepare-image-context.sh  prepare-local.sh
src/: accounting_client.rs  addresses_client.rs  api.rs  auth_links.rs  catalog.rs  config.rs  identity.rs  lib.rs  main.rs  model.rs  order.rs  payments_client.rs  store.rs  storefront.rs  templates.rs  test_support.rs  web.rs
src/accounting_client/: accounting_client_error.rs  create_receipt_body.rs
src/addresses_client/: address_summary.rs  addresses_client_error.rs
src/api/: cart_detail.rs  cart_line_detail.rs  store_reject.rs
src/model/: cart.rs  cart_form.rs  cart_line.rs  cart_status.rs  create_cart.rs  create_line.rs  line_form.rs  update_cart.rs  update_line.rs
src/order/: create_order_line.rs  create_order_request.rs  order.rs  order_error.rs  order_line.rs
src/payments_client/: charge.rs  create_charge_body.rs  payment_method_summary.rs  payments_client_error.rs
src/store/: cart_store.rs  store_error.rs
src/templates/: cart_form_values.rs  cart_row.rs  checkout_line_row.rs  checkout_option.rs  checkout_template.rs  detail_template.rs  form_template.rs  index_context.rs  index_template.rs  line_form_values.rs  line_row.rs  priced_line.rs  public_line_row.rs  reserved_line_row.rs  reserved_template.rs  storefront_cart_template.rs  user_ref.rs
src/web/: checkout_choice.rs  checkout_form.rs  checkout_session.rs
templates/: checkout.html  detail.html  form.html  index.html  nav_cart.html  reserved.html  storefront_cart.html
