[workspace]
members = [".", "nav"]
resolver = "2"

[package]


name = "sigma-cart"
version = "0.1.0"
edition = "2024"
rust-version = "1.97.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://cart.sigma-tactical.com"
description = "Shopping cart service for Sigma Tactical Group — carts backed by catalog SKUs and identity users"
publish = false

[dependencies]
askama = "0.16.0"
anyhow = "1.0.103"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
sigma-theme = { git = "https://github.com/sigmatactical-org/sigma-theme.git", features = ["warp", "cache"] }
sigma-identity-nav = { git = "https://github.com/sigmatactical-org/identity.git", package = "sigma-identity-nav" }
sigma-pg = { git = "https://github.com/sigmatactical-org/sigma-pg.git" }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal"] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
warp = { version = "0.4.3", features = ["server"] }

[dev-dependencies]
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["sync"] }
warp = { version = "0.4.3", features = ["server", "test"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
